--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600');
 
 html {
+  min-height: 100% !important;
   max-width: 100%;
   overflow-y: auto;
   overflow-x: hidden;
 }
 body {
+    min-height: 100% !important;
   margin: 0px;
   padding: 0px;
   font-family: 'Open Sans', sans-serif;
@@ -13,15 +15,62 @@ body {
 }
 
 .header {
-  width: 100%;
   height: 60px;
   background-color: #536169;
   padding-left: 20%;
   padding-right: 20%;
+  -webkit-box-shadow: 0px 0px 2px 0px rgba(143,143,143,0.47);
+  -moz-box-shadow: 0px 0px 2px 0px rgba(143,143,143,0.47);
+  box-shadow: 0px 0px 2px 0px rgba(143,143,143,0.47);
 }
 
 .header img {
+  float: left;
   margin-top: 18px;
+}
+
+ul {
+  float: right;
+  list-style-type: none;
+  margin: 14px 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+li {
+  float: left;
+  margin-left: 20px;
+}
+
+li a {
+  display: block;
+  padding: 8px;
+}
+
+li a:link {
+  font-size: 14px;
+  color: #e9e9e9;
+  text-decoration: none;
+}
+
+li a:hover {
+  font-size: 14px;
+  color: #414141;
+  text-decoration: none;
+  transition: all .2s;
+}
+
+li a:visited:hover {
+  font-size: 14px;
+  color: #414141;
+  text-decoration: none;
+  transition: all .2s;
+}
+
+li a:visited {
+  font-size: 14px;
+  color: #e9e9e9;
+  text-decoration: none;
 }
 
 .content {
@@ -30,7 +79,7 @@ body {
   margin-left: 20%;
   margin-right: 20%;
   padding: 20px;
-  min-height: 640px;
+  min-height: 420px;
   background-color: #FFF;
   border-radius: 3px;
   font-size: 14px;
@@ -62,6 +111,7 @@ body {
 
 .result-table {
   padding-top: 0px;
+  height: 25px;
 }
 
 .result-table td {
@@ -83,7 +133,8 @@ body {
 }
 
 .box p {
-  padding: 0px;
+  display: inline-block;
+  padding: 1px;
   margin: 0px;
 }
 
@@ -98,6 +149,7 @@ body {
 
 .crib-slider {
   float: left;
+  height: 27px;
   display: inline-block;
   margin-top: 20px;
   width: 100%;
@@ -108,13 +160,11 @@ body {
 }
 
 .crib-result {
-  background-color: #cfcfcf;
+  background-color: #fff;
   border-radius: 3px;
-  border: 1px solid #b9b9b9;
+  border: 1px solid #cfcfcf;
   margin-top: 7px;
   padding-left: 5px;
-  padding-top: 3px;
-  padding-bottom: 3px;
 }
 
 .opac {
@@ -197,18 +247,22 @@ body {
 
 .messages {
   margin-top: 20px;
+  display: inline-block;
+  margin-bottom: 100px;
 }
 
 .message1 {
   display: block-inline;
   float: left;
   width: 50%;
+  height: 90px;
 }
 
 .message2 {
   display: block-inline;
   float: left;
   width: 50%;
+  height: 90px;
 }
 
 .message-textarea-left {
@@ -273,16 +327,18 @@ input[type=text]:focus {
 }
 
 .button {
+  float: right;
   background-color: #8CCF8F;
   border: 1px solid #76c079;
   color: white;
-  padding: 3px 0px;
+  padding: 1px 5px;
   text-decoration: none;
   display: inline-block;
-  margin: 5px 0px;
   cursor: pointer;
-  border-radius: 3px;
-  width: 100%;
+  border-radius: 0px 3px 3px 0px;
+  margin-top: -1px;
+  height: 23px;
+  margin-right: -1px;
   transition: all .2s;
 }
 
@@ -312,8 +368,19 @@ input[type=text]:focus {
   float: right;
   display: inline-block;
   margin-top: 20px;
+}
+
+.brute-results-table {
+  color: #6d6d6d;
+  background-color: #efefef;
+  width: 100%;
+  float: right;
+  resize: none;
   border: 1px solid #e6e6e6;
-  border-radius: 3px;
-  background-color: #fff;
-  height: 165px;
+  border-radius: 4px;
+}
+
+.highlight-td {
+  color: #efefef;
+  background-color: #cfcfcf;
 }
